--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,11 @@ description: SLAM and stuff
 # List of links in the navigation bar
 navbar-links:
 #  About Me: "aboutme"
+  Projects:
+     - Place Recognition : "PlaceRecognition"
   Publications: "publications"
   RSS Workshop: "http://ylatif.github.io/movingsensors/"
-  Projects:
-     - Place Recognition : "placeRecognition"
+  
 #  Resources:
 #    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
 #    - Learn markdown: "http://www.markdowntutorial.com/"
